--- a/02-Android/app/src/main/res/values/strings.xml
+++ b/02-Android/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">MovilesSoftware2021AEjercicio1</string>
     <string name="bienvenida">Bienvenidos</string>
+    <string-array name="string_array_opciones_dialogo">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
 </resources>
