--- a/02-Android/app/src/main/res/values-port/strings.xml
+++ b/02-Android/app/src/main/res/values-port/strings.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="bienvenida">Que mas wei</string>
+    <string name="bienvenida">Que mas </string>
 </resources>
