--- a/02-firebase/app/src/main/res/values/strings.xml
+++ b/02-firebase/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">FirebaseUno</string>
+    <string-array name="opcionesCalificacion">
+        <item>Malo</item>
+        <item>Regular</item>
+        <item>Muy Bueno</item>
+    </string-array>
 </resources>
